# LzamSoloader

./: .gitignore  DESIGN.md  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/so/: manifest.json
app/src/main/assets/so/l1/: libnetwork.so.lzma  libui.so.lzma
app/src/main/assets/so/l2/: libim.so.lzma  libpayment.so.lzma
app/src/main/assets/so/l3/: libmap.so.lzma  libvideo.so.lzma
app/src/main/cpp/: lzma_jni.cpp
app/src/main/java/com/demo/lzmaloader/: App.kt  LZMANative.kt  MainActivity.kt  SOManifest.kt  SoLoader.kt
app/src/main/res/layout/: activity_main.xml  item_so.xml
app/src/main/res/values/: strings.xml  themes.xml
so-loader-plugin/: build.gradle.kts  settings.gradle.kts
so-loader-plugin/src/main/kotlin/com/demo/soloader/gradle/: GenerateSoManifestTask.kt  PackSoAssetsTask.kt  SoLoaderExtension.kt  SoLoaderPlugin.kt
soloader/: build.gradle  settings.gradle
soloader/src/main/cpp/: CMakeLists.txt  lzma_jni.cpp
soloader/src/main/java/com/demo/soloader/: LZMANative.kt  SOManifest.kt  SoLoader.kt
tools/: pack_so.py  so_manifest.json
